--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body{
    margin:0;
 }
+.header{
+   background-image: url(data/cover.jpg);
+   background-attachment: scroll;
+   background-repeat: no-repeat;
+   background-position: bottom -40px center;
+   height: 300px;
+}
 .container{
    width: 100%;
    /* background-color: red; */
@@ -100,9 +107,9 @@ body{
    width: max-content;
    height: 150px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   margin-right: 65px;
+   margin-right: 50px;
+   margin-left: 50px;
    margin-bottom: 70px;
-   /* background-color: red; */
 }
 .avatar{
    width: 160px;
