--- a/style.css
+++ b/style.css
@@ -109,7 +109,8 @@ body{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-right: 50px;
    margin-left: 50px;
-   margin-bottom: 70px;
+   margin-top: 35px;
+   margin-bottom: 35px;
 }
 .avatar{
    width: 160px;
