--- a/style.css
+++ b/style.css
@@ -59,23 +59,24 @@ body{
 .card{
    width: 320px;
    height:max-content;
-   display: inline-block;
+   /* display: inline-block; */
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 50px;
    box-shadow: 0px 4px 4px rgba(39, 39, 39, 0.25);
+   /* float: left; */
 }
 .image{
    background-color: lightgrey;
    width: 100%;
-   height: 250px;
+   /* height: 250px; */
    float: left;
    /* background-color: red; */
 }
 .image img{
    width:100%;
-   height:100%;
-   object-fit: cover;
+   /* height:100%; */
+   object-fit: contain;
 }
 .img-text{
    height: max-content;
@@ -94,7 +95,7 @@ body{
 }
 .img-description{
    width: calc(100% - 20px);
-   height: 160px;
+   height: max-content;
    font-size:15px;
    margin-top: 18px;
    float: left;
@@ -140,6 +141,45 @@ body{
    margin-bottom: 20px;
    float:left;
 }
-.description{
 
-}
+.gallery .row {
+   display: -ms-flexbox; /* IE10 */
+   display: flex;
+   -ms-flex-wrap: wrap; /* IE10 */
+   flex-wrap: wrap;
+   padding: 0 4px;
+ }
+ 
+ /* Create four equal columns that sits next to each other */
+ .gallery .column {
+   -ms-flex: 25%; /* IE10 */
+   flex: 25%;
+   max-width: 25%;
+   padding: 0 4px;
+   margin-right: 30px;
+   margin-left: 30px;
+ }
+ 
+ .gallery .column img {
+   margin-top: 8px;
+   vertical-align: middle;
+   width: 100%;
+ }
+ 
+ /* Responsive layout - makes a two column-layout instead of four columns */
+ @media screen and (max-width: 800px) {
+   .column {
+     -ms-flex: 33%;
+     flex: 33%;
+     max-width: 33%;
+   }
+ }
+ 
+ /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+ @media screen and (max-width: 600px) {
+   .column {
+     -ms-flex: 100%;
+     flex: 100%;
+     max-width: 100%;
+   }
+ }
