--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
    /* float: left; */
 }
 .image{
-   background-color: lightgrey;
+   /* background-color: lightgrey; */
    width: 100%;
    /* height: 250px; */
    float: left;
