--- a/style.css
+++ b/style.css
@@ -56,13 +56,17 @@ body{
 }
 
 /* ABOUT US */
+.members{
+   width: 80%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content:space-between;
+}
 .person{
-   display:inline-block;
+   /* display:inline-block; */
    width: max-content;
    height: 150px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   margin-right: 50px;
-   margin-left: 50px;
    margin-top: 35px;
    margin-bottom: 35px;
 }
