--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
    /* background-color: red; */
 }
 .content{
-   width: 85vw;
+   width: 80vw;
    margin: auto;
 }
 .row{
@@ -57,18 +57,19 @@ body{
 
 /* ABOUT US */
 .members{
-   width: 80%;
+   width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content:space-between;
 }
 .person{
-   /* display:inline-block; */
    width: max-content;
    height: 150px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-top: 35px;
    margin-bottom: 35px;
+   margin-left: 50px;
+   margin-right: 50px;
 }
 .avatar{
    width: 160px;
@@ -82,7 +83,7 @@ body{
    object-fit: cover;
 }
 .info{
-   width: 300px;
+   width: max-content;
    height: 100%;
    font-size: 24px;
    text-align: left;
