--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
    /* background-color: red; */
 }
 .content{
-   width: 80vw;
+   width: 90vw;
    margin: auto;
 }
 .row{
@@ -68,8 +68,8 @@ body{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-top: 35px;
    margin-bottom: 35px;
-   margin-left: 50px;
-   margin-right: 50px;
+   margin-left: 85px;
+   margin-right: 85px;
 }
 .avatar{
    width: 160px;
@@ -108,19 +108,13 @@ body{
 .card{
    width: 320px;
    height:max-content;
-   /* display: inline-block; */
    margin-left: 25px;
    margin-right: 25px;
-   margin-bottom: 50px;
    box-shadow: 0px 4px 4px rgba(39, 39, 39, 0.25);
-   /* float: left; */
 }
 .image{
-   /* background-color: lightgrey; */
    width: 100%;
-   /* height: 250px; */
    float: left;
-   /* background-color: red; */
 }
 .image img{
    width:100%;
@@ -130,7 +124,8 @@ body{
 .img-text{
    height: max-content;
    background-color: white;
-   padding: 10px 10px;
+   /* padding: 10px 10px; */
+   margin-bottom: 30px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align: left;
    float:left;
@@ -155,7 +150,6 @@ body{
    display: flex;
    -ms-flex-wrap: wrap; /* IE10 */
    flex-wrap: wrap;
-   padding: 0 4px;
  }
  
  /* Create four equal columns that sits next to each other */
@@ -164,11 +158,12 @@ body{
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
-   margin-right: 30px;
-   margin-left: 30px;
+   margin-right: 40px;
+   margin-left: 40px;
  }
  
  .gallery .column img {
+   margin-bottom: 10px;
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
