--- a/view/website3.html
+++ b/view/website3.html
@@ -26,7 +26,7 @@
          <div class="row">
             <div class="navbar">
                <a href="../index.html">Website 1</a>
-               <a>Website 2</a>
+               <a href="website2.html">Website 2</a>
                <a href="website3.html" class="active">Website 3</a>
                <a>Website 4</a>
                <a>Website 5</a>
