--- a/view/website3.html
+++ b/view/website3.html
@@ -28,7 +28,7 @@
                <a href="../index.html">Website 1</a>
                <a href="website2.html">Website 2</a>
                <a href="website3.html" class="active">Website 3</a>
-               <a>Website 4</a>
+               <a href="website4.html">Website 4</a>
                <a>Website 5</a>
             </div>
          </div>
