--- a/view/website4.html
+++ b/view/website4.html
@@ -29,7 +29,7 @@
                <a href="website2.html">Website 2</a>
                <a href="website3.html">Website 3</a>
                <a href="website4.html" class="active">Website 4</a>
-               <a>Website 5</a>
+               <a href="website5.html">Website 5</a>
             </div>
          </div>
 
@@ -43,6 +43,6 @@
 
    <script src="displayImages.js"></script>
    <script>
-      displayImages("../crawler/one/one/spiders/yandex.json");
+      displayImages("../crawler/multiplesources/one/spiders/yandex.json");
    </script>
 </html>
