Update project page

--- a/view/project.html
+++ b/view/project.html
@@ -23,24 +23,16 @@
          <!-- </div> -->
 
          <div class="row">
-            <p style="font-family: 'Segoe UI';
-            font-style: normal;
-            font-weight: normal;
-            font-size: 24px;
-            line-height: 29px;
-            align-items: center;
-            text-align: center; margin-top: 0;">
-            This project is for the cource <strong>Web Application Developemnt</strong>. <br>
-            Our topic is to develop a website to monitor CT scan image data of lung cancer from multiple data sources<br>
-            For this topic, we have:<br>
-            <p style="text-align: left; font-family: 'Segoe UI';
-            font-style: normal;
-            font-weight: normal;
-            font-size: 24px;
-            line-height: 29px; width: 80%; margin: auto;">
-            - Developed crawlers using Python (using Selenium, Scrapy, BS4) to crawl CT scan image data of Lung Cancer and their label from multiple sources on the Web<br>
-            - The crawled data are visualize in a web interface</p>
-          </p>
+            <div class="content project">
+               <p>
+               This project is for the cource <strong>Web Application Developemnt</strong>.
+               Our topic is to develop a website to monitor CT scan image data of lung cancer from multiple data sources.
+               For this topic, we have:
+               <ul>
+                  <li>Developed crawlers using Python (using Selenium, Scrapy, BS4) to crawl CT scan image data of Lung Cancer and their label from multiple sources on the Web</li>
+                  <li>The crawled data are visualize in a web interface</li>
+               </ul>
+            </div>
           </div>
          </div>
       </div>
