--- a/view/style.css
+++ b/view/style.css
@@ -103,13 +103,26 @@ body{
    font-size: 20px;
 }
 
+/* PROJECT */
+.project{
+   width: 70%;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.project p{
+   font-style: normal;
+   font-weight: normal;
+   font-size: 24px;
+   line-height: 29px;
+   align-items: center;
+   text-align: justify;
+   word-wrap: break-word;
+   margin-top: 0;
+}
 
 /* GALLERY */
 .card{
    width: 320px;
    height:max-content;
-   margin-left: 25px;
-   margin-right: 25px;
    box-shadow: 0px 4px 4px rgba(39, 39, 39, 0.25);
 }
 .image{
