--- a/view/website4.html
+++ b/view/website4.html
@@ -13,7 +13,7 @@
                <div class="navbar right">
                   <a href="../index.html" class="active">Home</a>
                   <a href="about.html">About Us</a>
-                  <a>Project</a>
+                  <a href="project.html">Project</a>
                </div>
             </div>
             
