--- a/view/project.html
+++ b/view/project.html
@@ -25,12 +25,12 @@
          <div class="row">
             <div class="content project">
                <p>
-               This project is for the cource <strong>Web Application Developemnt</strong>.
+               This project is for the cource <strong>Web Application Development</strong>.
                Our topic is to develop a website to monitor CT scan image data of lung cancer from multiple data sources.
                For this topic, we have:
                <ul>
-                  <li>Developed crawlers using Python (using Selenium, Scrapy, BS4) to crawl CT scan image data of Lung Cancer and their label from multiple sources on the Web</li>
-                  <li>The crawled data are visualize in a web interface</li>
+                  <li>Developed crawlers using Python (using Selenium, Scrapy, BS4) to crawl CT scan image data of Lung Cancer and their labels from multiple sources on the Web</li>
+                  <li>The crawled data are visualized in a web interface</li>
                </ul>
             </div>
           </div>
