Change word in sentence

--- a/view/project.html
+++ b/view/project.html
@@ -29,7 +29,7 @@
                Our topic is to develop a website to monitor CT scan image data of lung cancer from multiple data sources.
                For this topic, we have:
                <ul>
-                  <li>Developed crawlers using Python (using Selenium, Scrapy, BS4) to crawl CT scan image data of Lung Cancer and their labels from multiple sources on the Web</li>
+                  <li>Developed crawlers using Python (using Selenium, Scrapy, BS4) to crawl CT scan image data of Lung Cancer and their labels from multiple sources on the Internet</li>
                   <li>The crawled data are visualized in a web interface</li>
                </ul>
             </div>
