--- a/view/website4.html
+++ b/view/website4.html
@@ -30,6 +30,7 @@
                <a href="website4.html" class="active">Website 4</a>
                <a href="website5.html">Website 5</a>
                <a href="website6.html">Website 6</a>
+               <a href="website7.html">Website 7</a>
             </div>
          </div>
 
