--- a/view/website6.html
+++ b/view/website6.html
@@ -30,6 +30,7 @@
                <a href="website4.html">Website 4</a>
                <a href="website5.html">Website 5</a>
                <a href="website6.html" class="active">Website 6</a>
+               <a href="website7.html">Website 7</a>
             </div>
          </div>
 
