--- a/view/website2.html
+++ b/view/website2.html
@@ -8,7 +8,7 @@
 
    <body>
       <div class="container">
-         <!-- <div class="header"> -->
+         <div class="header">
             <div class="row">
                <div class="navbar right">
                   <a href="../index.html" class="active">Home</a>
@@ -20,17 +20,17 @@
             <div class="row">
                <div class="title">CT Lung Cancer Image</div>
             </div>
-         <!-- </div> -->
+         </div>
 
          <div class="row">
             <div class="navbar">
-               <a href="../index.html">Website 1</a>
-               <a href="website2.html" class="active">Website 2</a>
-               <a href="website3.html">Website 3</a>
-               <a href="website4.html">Website 4</a>
-               <a href="website5.html">Website 5</a>
-               <a href="website6.html">Website 6</a>
-               <a href="website7.html">Website 7</a>
+               <a href="../index.html">ERJ</a>
+               <a href="website2.html" class="active">NCBI</a>
+               <a href="website3.html">Radiopaedia</a>
+               <a href="website4.html">Yandex</a>
+               <a href="website5.html">Duckduckgo</a>
+               <a href="website6.html">Wikimedia</a>
+               <a href="website7.html">Emedicine</a>
             </div>
          </div>
 
