--- a/view/website6.html
+++ b/view/website6.html
@@ -24,13 +24,13 @@
 
          <div class="row">
             <div class="navbar">
-               <a href="../index.html">Website 1</a>
-               <a href="website2.html">Website 2</a>
-               <a href="website3.html">Website 3</a>
-               <a href="website4.html">Website 4</a>
-               <a href="website5.html">Website 5</a>
-               <a href="website6.html" class="active">Website 6</a>
-               <a href="website7.html">Website 7</a>
+               <a href="../index.html">ERJ</a>
+               <a href="website2.html">NCBI</a>
+               <a href="website3.html">Radiopaedia</a>
+               <a href="website4.html">Yandex</a>
+               <a href="website5.html">Duckduckgo</a>
+               <a href="website6.html" class="active">Wikimedia</a>
+               <a href="website7.html">Emedicine</a>
             </div>
          </div>
 
