--- a/view/style.css
+++ b/view/style.css
@@ -2,7 +2,7 @@ body{
    margin:0;
 }
 .header{
-   background-image: url(data/cover.jpg);
+   /* background-image: url(data/cover.jpg); */
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-position: bottom -40px center;
@@ -33,6 +33,7 @@ body{
 }
 .navbar a{
    color:black;
+   cursor: pointer;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-decoration: none;
    text-transform: uppercase;
