--- a/view/style.css
+++ b/view/style.css
@@ -2,11 +2,14 @@ body{
    margin:0;
 }
 .header{
-   /* background-image: url(data/cover.jpg); */
+   width: 100%;
+   height: 300px;
+   /* background-color: red; */
+   background-image: url('https://www.fg-a.com/wallpapers/white-marble-2-2018.jpg');
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-position: bottom -40px center;
-   height: 300px;
+   object-fit: cover;
 }
 .container{
    width: 100%;
