Add header background (#12)

--- a/view/style.css
+++ b/view/style.css
@@ -5,7 +5,7 @@ body{
    width: 100%;
    height: 300px;
    /* background-color: red; */
-   background-image: url('https://www.fg-a.com/wallpapers/white-marble-2-2018.jpg');
+   background-image: url('https://img.freepik.com/free-vector/molecular-structures-neural-network-background-molecules-dna-genetic-engineering_120542-21.jpg?size=626&ext=jpg');
    background-attachment: scroll;
    background-position: bottom -40px center;
    object-fit: cover;
