--- a/view/about.html
+++ b/view/about.html
@@ -8,7 +8,7 @@
 
    <body>
       <div class="container">
-         <!-- <div class="header"> -->
+         <div class="header">
             <div class="row">
                <div class="navbar right">
                   <a href="../index.html">Home</a>
@@ -20,7 +20,7 @@
             <div class="row">
                <div class="title">About Us</div>
             </div>
-         <!-- </div> -->
+         </div>
 
          <div class="row">
             <div class="content">
