--- a/view/style.css
+++ b/view/style.css
@@ -5,9 +5,9 @@ body{
    width: 100%;
    height: 300px;
    /* background-color: red; */
-   background-image: url('https://img.freepik.com/free-vector/molecular-structures-neural-network-background-molecules-dna-genetic-engineering_120542-21.jpg?size=626&ext=jpg');
+   background-image: url('https://img.freepik.com/free-vector/abstract-white-gray-gradient-color-curve-background_127747-19.jpg?size=626&ext=jpg');
    background-attachment: scroll;
-   background-position: bottom -40px center;
+   /* background-position: bottom -40px center; */
    object-fit: cover;
 }
 .container{
@@ -110,6 +110,7 @@ body{
 .project{
    width: 70%;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   margin-top: 50px;
 }
 .project p{
    font-style: normal;
