--- a/view/about.html
+++ b/view/about.html
@@ -23,9 +23,7 @@
          </div>
 
          <div class="row">
-            <div class="content">
-               <div class="members">
-               </div>
+            <div class="content members">
             </div>
          </div>
       </div>
