--- a/view/style.css
+++ b/view/style.css
@@ -10,12 +10,7 @@ body{
    /* background-position: bottom -40px center; */
    object-fit: cover;
 }
-.container{
-   width: 100%;
-   /* background-color: red; */
-}
 .content{
-   width: 80vw;
    margin: auto;
 }
 .row{
@@ -60,7 +55,7 @@ body{
 
 /* ABOUT US */
 .members{
-   width: 100%;
+   width: 80%;
    display: flex;
    flex-wrap: wrap;
    justify-content:space-between;
@@ -144,7 +139,7 @@ body{
    /* padding: 10px 10px; */
    margin-bottom: 30px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   text-align: left;
+   text-align: justify;
    float:left;
 }
 .img-title{
@@ -159,47 +154,28 @@ body{
    height: max-content;
    font-size:15px;
    float: left;
-   /* background-color: red; */
 }
 
-.gallery .row {
-   display: -ms-flexbox; /* IE10 */
-   display: flex;
-   -ms-flex-wrap: wrap; /* IE10 */
-   flex-wrap: wrap;
- }
+.gallery{
+   width: max-content;
+}
+.gallery .column {
+   width: 320px;
+   float: left;
+   margin-left: 10px;
+   margin-right: 10px;
+}
 
- /* Create four equal columns that sits next to each other */
- .gallery .column {
-   -ms-flex: 25%; /* IE10 */
-   flex: 25%;
-   max-width: 25%;
-   padding: 0 4px;
-   margin-right: 30px;
-   margin-left: 30px;
- }
-
- .gallery .column img {
-   margin-bottom: 10px;
-   margin-top: 8px;
-   vertical-align: middle;
-   width: 100%;
- }
-
- /* Responsive layout - makes a two column-layout instead of four columns */
- @media screen and (max-width: 800px) {
-   .column {
-     -ms-flex: 33%;
-     flex: 33%;
-     max-width: 33%;
+@media screen and (max-width: 1030px) {
+   .gallery {
+     width: 680px;
+     margin: auto;
    }
- }
+}
 
- /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
- @media screen and (max-width: 600px) {
-   .column {
-     -ms-flex: 100%;
-     flex: 100%;
-     max-width: 100%;
+@media screen and (max-width: 800px) {
+   .gallery {
+     width: 320px;
+     margin: auto;
    }
  }
