--- a/view/style.css
+++ b/view/style.css
@@ -126,12 +126,13 @@ body{
 }
 .image{
    width: 100%;
+   height:300px;
    float: left;
 }
 .image img{
    width:100%;
-   /* height:100%; */
-   object-fit: contain;
+   height:100%;
+   object-fit: cover;
 }
 .img-text{
    height: max-content;
