--- a/view/style.css
+++ b/view/style.css
@@ -123,6 +123,7 @@ body{
    width: 320px;
    height:max-content;
    box-shadow: 0px 4px 4px rgba(39, 39, 39, 0.25);
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .image{
    width: 100%;
@@ -135,26 +136,27 @@ body{
    object-fit: cover;
 }
 .img-text{
+   width: 100%;
    height: max-content;
    background-color: white;
-   /* padding: 10px 10px; */
    margin-bottom: 30px;
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align: justify;
    float:left;
-}
-.img-title{
-   width: 100%;
-   height: 20px;
-   font-weight: 600;
-   text-transform: uppercase;
-   float: left;
 }
 .img-description{
    width: 100%;
    height: max-content;
    font-size:15px;
    float: left;
+   margin-top: 7px;
+}
+.seemore{
+   color: grey;
+   font-size: 16px;
+   float: right;
+   margin-top: 15px;
+   margin-right: 5px;
+   cursor: pointer;
 }
 
 .gallery{
